# partenit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
analyzer/: docker-compose.yml
analyzer/backend/: Dockerfile  README.md  pyproject.toml
analyzer/backend/src/partenit/analyzer/backend/: main.py  metrics.py  state.py
analyzer/backend/src/partenit/analyzer/backend/routes/: decisions.py  guard.py  policies.py  scenarios.py  trust.py
analyzer/backend/tests/: test_api.py
analyzer/frontend/: Dockerfile  README.md  index.html  package.json  tailwind.config.js
docs/: getting-started.md
docs/guides/: benchmarks.md  custom-robot.md  isaac-sim.md  llm-agent.md  ros2-robot.md  simulation.md  writing-policies.md
docs/reference/: decision-packet.md  trust-model.md
examples/: eval_demo.py  gazebo_demo.py  guarded_robot_demo.py  isaac_sim_demo.py  llm_agent_guard_demo.py  llm_tool_guard_demo.py  robot_with_guard.py  robot_without_guard.py  ros2_demo.py  test_h1_isaac.py  unitree_demo.py
examples/benchmarks/: blind_spot.yaml  cross_adapter_determinism.yaml  human_crossing_path.yaml  llm_unsafe_command.yaml  policies.yaml  policy_conflict_determinism.yaml  sensor_degradation.yaml
examples/isaac_sim/: README.md  env_loader.py  h1_bridge.py  (+4 more)
monitoring/: README.md  grafana_dashboard.json  prometheus.yml
schemas/: DecisionFingerprint.schema.json  DecisionPacket.schema.json  robot-adapter-api.yaml
scripts/: check_grade.py  install.sh
tests/: README.md  test_integration.py
(+16 files in other folders)
